# Palautusrepo

./: README.md
maksukortti-mock/src/: kassapaate.py
viikko2/poetry-web/: pyproject.toml
viikko3/webcounter/: log.html  output.xml  pyproject.toml  report.html
viikko3/webcounter/src/: app.py
viikko3/webcounter/src/templates/: index.html
viikko3/webcounter/src/tests/: reset.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/src/: tennis_game.py
