[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Fiia Haavisto <fiiahaav@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "1.4.54"
fastapi = "^0.121.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
