[tool.poetry]
name = "webcounter"
version = "0.1.0"
description = "Webcounter project"
authors = ["Matti Luukkainen <mluukkai@iki.fi>"]
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^3.1.2"

[tool.poetry.group.dev.dependencies]
robotframework = "^7.3.2"
robotframework-seleniumlibrary = "^6.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
